--- a/css/main.css
+++ b/css/main.css
@@ -220,7 +220,7 @@ h1{
 .aboutp{
   line-height: .8in;
   font-family: Galano,-apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
-  font-size: 25px;
+  font-size: 2vw;
   font-weight: bold;
   color: white;
   padding: 55px;
