--- a/css/main.css
+++ b/css/main.css
@@ -306,7 +306,7 @@ section {
   height: 100vh;
 }
 
-.flex-item {
+/* .flex-item {
   background: #de6954;
   padding: 5px;
   width: 200px;
@@ -316,7 +316,7 @@ section {
   color: white;
   font-weight: bold;
   font-size: 10px;
-}
+} */
 
 /* FAQ */
 
@@ -327,7 +327,7 @@ section {
 }
 
 .flex-box{
-  display:flex;
+  display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
@@ -369,11 +369,11 @@ section {
 
 .faqtext {
   color: white;
-  font-size: 1.2vw;
+  font-size: 1vw;
   font-weight: 400;
   font-family: Galano,-apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
   text-align: center;
-  padding: 30px;
+  margin-top: 3vw;
 }
 
 
